# InfoLadder

./: .gitignore  CLAUDE.md  Makefile  README.md  T4_spectrum_study_plan.md  environment.yml  pyproject.toml
.claude/: settings.json
.claude/agents/: data-engineer.md  experiment-runner.md  red-team-reviewer.md  stats-auditor.md
configs/: calibration_a0.yaml  calibration_t_ladder.yaml  calibration_t_v6.yaml  calibration_t_v6_gpu.yaml  gate.yaml  grid_phase_b.yaml
data/: CLAUDE.md
docs/: CLUSTER.md  DATA.md  DECISIONS.md  EXPERIMENT_PROTOCOL.md  GLOSSARY.md  ROADMAP.md
docs/audits/: project_audit_2026-07-16.md
docs/patches/: README.md  tesseract2-5color-tolerance.patch
docs/scout_reports/: cad_datasets_2026-07-14.md  msd_2026-07-14.md  textless_lane_2026-07-14.md
paper/: CLAUDE.md  claims.md
results/: CLAUDE.md  registry.jsonl
results/presentations/: 2026-07-21_supervisor_meeting_01.pptx
scripts/: build_corpus_results.py  build_msd_corpus.py  gen_door_trainset.py  gen_schemas.py  ingest_prelim_rasters.py  make_reports.py  make_supervisor_deck.py  render_msd_rasters.py  score_msd_tesseract.py  setup_env.sh  tesseract_download_weights.py
scripts/slurm/: calibrate.sbatch  calibrate_t.sbatch  calibrate_t_v6.sbatch  calibrate_t_v6_gpu.sbatch  gpu_train.sbatch  verify.sbatch  (+7 more)
tests/: conftest.py  test_calibration_e2e.py  test_degenerate_cells.py  test_families.py  test_featurize.py  test_floorplancad.py  test_labels.py  test_levels.py  test_manifest.py  test_mdl.py  test_msd.py  test_pde.py  test_raster.py  test_stats.py  test_tesseract.py  test_vinfo.py
(+184 files in other folders)
